--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "keywords": [],
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.2",
+    "@types/uuid": "^9.0.7",
     "prisma": "^5.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.11.0",
     "helmet": "^7.0.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.2"
   },
   "engines": {
